- Added patches from url support, and improve classloader reloading, and patch application. - Added MixinSquared, and Mixin Constraints. - Added external JVM-ARGUMENTS, `puzzle.core.piece.side`, `puzzle.core.gameProvider`, `puzzle.core.mixin.enabled`, `puzzle.core.classloader.classOverrides`, `puzzle.core.classloader.classDump`. - Added PuzzleEntrypointUtil.getEntrypointInstances, and PuzzleEntrypointUtil.getEntrypoints. - Added two new entrypoints `mixinsquared` and `mixinsquared-adjuster`. - Moved ServerPiece to server module. - Gathered all dependencies to make sure launchers and other applications so recursive pom traversal won't be needed. - Moved IClassTransformer net.minecraft.launchwrapper to satisfy mixins